--- a/style.css
+++ b/style.css
@@ -235,21 +235,22 @@ body {
 }
 .leftHome .left  {
     border: .1rem black solid;
-    padding: 45px;
     opacity: 0.8;
     background: rgb(5, 5, 5);
-    margin: 0 0 0 20rem;
+    margin: 2rem 0 0 10rem;
+    width: 28rem;
+    padding: 6rem;
+    border-radius: 15px;
 }
 .left .left_home {
     border: red solid;
     border-width: 1rem;
-    height: 10rem;
-    width: 12rem;
-    padding: 2rem;
+    height: 18rem;
+    width: 25rem;
 }
 .left_home img {
-    width: 12rem;
-    height: 20rem;
+    width: 20rem;
+    height: 28rem;
     margin-top: -5rem;
     border-radius: 10px;
 }
@@ -258,22 +259,23 @@ body {
     margin: 0 5rem 0 -2rem;
 }
 .right .right_home {
-    position: fixed;
-    border-radius: 700px;
     border: .1rem black solid;
     background: red;
-    padding: 60px;
+    padding: 70px;
     text-align: left;
-    width: 15%;
+    width: 50%;
+    height: 23rem;
+    margin: 2rem 0 0 0;
+    border-radius: 400px;
 }
 .right .right_home h1 {
-    font-size: 20px;
-    margin: 1rem;
+    font-size: 50px;
+    margin: 3rem;
     color: white;
 }
 .right .right_home p {
-    font-size: 10px;
-    margin: 1rem;
+    font-size: 12px;
+    margin: 0 0 0 1rem;
     color: black;
     font-family: var(--fs10);
 }
@@ -282,7 +284,7 @@ body {
     padding: 2px;
     color:black;
     font-family: var(--fs10);
-    margin: 2px 0 0 0;
+    margin: 1rem 0 0 3rem;
     cursor: pointer;
 }
 .right .right_home .btnHome2 {
@@ -290,7 +292,7 @@ body {
     padding: 2px;
     color:black;
     font-family: var(--fs10);
-    margin: 5px 0 0 0;
+    margin: 1rem 0 0 3rem;
     cursor: pointer;
 }
 /* About Section */
@@ -338,8 +340,6 @@ body {
     border-radius: 5px;
 }
 /* About2 Section */
-#about2 {
-}
 /* Left About */
 .about1 {
     width:  100%;
@@ -436,9 +436,6 @@ body {
     font-weight: 900;
 }
 /* Job Section */
-#job {
-    
-}
 .job {
     width:  100%;
     display: grid;
@@ -733,39 +730,48 @@ footer {
         background: gray;  
     }
     /* Home Section */
-    #home {
-        
-    }
     #home .home{
         grid-template-columns: 1fr;
         text-align: center;
     }
     .leftHome .left {
-        width: 2rem;
-        height: 2rem;
-        margin: -5rem 0 1rem 4rem;
+        margin: -4rem 0 0 -3rem;
+        width: 24%;
+        height: 30%;
     }
     .left .left_home {
+        margin: -4rem 0 0 -4rem;
+        width: 11rem;
+        height: 10rem;
+    }
+    .left_home img {
         display: none;
     }
     .right .right_home {
         width: 8rem;
         height: 8rem;
-        margin: 0 0 1rem 6rem;
+        margin: -2rem 0 4rem 2rem;
         text-align: center;
     }
     .right .right_home h1 {
-        font-size: 12px;
-        margin-top: -2rem;
+        font-size: 11px;
+        margin: -1rem 0 0 -1rem;
+        width: 10rem;
     }
     .right .right_home p {
         font-size: 8px;
         font-family: var(--fs11);
         color: black;
+        margin: 0 0 0 -1rem;
+    }
+    .right .right_home .btnHome1 {
+        font-size: 5px;
+        margin: 0 0 0 0;
     }
     .right .right_home .btnHome1,
     .right .right_home .btnHome2 {
         font-size: 5px;
+        margin: 0 0 0 0;
     }
     /* About Section */
     .about {
