--- a/style.css
+++ b/style.css
@@ -447,26 +447,31 @@ body {
     border: black;
 }
 .job .leftJob h1 {
-    margin: 5rem 0 0 10rem;
+    margin: 8rem 0 0 11rem;
     font-family: var(--fs10);
     text-align: left;
+    font-size: 40px;
 }
 .job .leftJob form {
     margin: 1rem 0 0 8rem;
-    padding: 10px;
-    width: 60%;
+    padding: 30px;
+    width: 70%;
     box-shadow: 0 0 50px #ccc;
     background-color: black;
     border-radius: 35px 10px 35px 0;
 }
 .leftJob form .jobInput {
-    margin: 10px 0 0 0;
+    margin: 10px 0 0 5rem;
     padding: 10px;
     text-align: left;
     color: white solid;
     width: 20rem;
     background-color: black;
     border: none;
+}
+.leftJob form  hr {
+    width: 60%;
+    margin: 0 0 1rem 5rem;
 }
 .leftJob form p {
     text-align: left;
@@ -477,10 +482,10 @@ body {
 }
 .leftJob form .btnJob {
     margin: 10px 0 0 0;
-    padding: 8px;
+    padding: 10px;
     text-align: center;
     color:  black;
-    width: 4rem;
+    width: 6rem;
     background-color: red;
     font-size: 10px;
     border: none;
@@ -491,10 +496,10 @@ body {
     border: black;
 }
 .job .rightJob iframe {
-    width: 60%;
-    height: 80%;
+    width: 80%;
+    height: 65%;
     border-radius: 20px;
-    margin: 5rem 0 0 0;
+    margin: 15rem 0 0 0;
 }
 /* Contact Section */
 #contact {
